--- a/src/main/resources/static/proxy/proxy.html
+++ b/src/main/resources/static/proxy/proxy.html
@@ -18,11 +18,19 @@
 </head>
 <body>
 <div id="rrapp">
-	<div class="grid-btn">
-		<a class="btn btn-default" href="proxy_add.html">新增</a>
-		<button type="button"  class="btn btn-default" @click="update">修改</button>
-		<button type="button" class="btn btn-default" @click="del">删除</button>
-	</div>
+    <div class="grid-btn">
+        <div class="form-group col-sm-2">
+            <input type="text" class="form-control" v-model="type" @keyup.enter="query" placeholder="类别">
+        </div>
+        <button type="button" class="btn btn-default" @click="query">查询</button>
+
+
+        <button type="button"  class="btn btn-default" @click="update">修改</button>
+
+        <button type="button" class="btn btn-default" @click="del">删除</button>
+
+
+    </div>
     <table id="jqGrid"></table>
     <div id="jqGridPager"></div>
 </div>
