--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -23,7 +23,7 @@
 <body class="hold-transition login-page">
 <div class="login-box" id="rrapp" v-cloak>
   <div class="login-logo">
-    <b>ELK</b>
+    <b>数据分析平台</b>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
